--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -5,3 +5,9 @@ workflows:
       primaryDescriptorPath: /run_gaudi.wdl
       testParameterFiles:
           - /run_gaudi.json
+workflows:
+    - name: test
+      subclass: WDL
+      primaryDescriptorPath: /test.wdl
+      testParameterFiles:
+          - /test.json
